plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.woojukang'
version = '0.0.1-SNAPSHOT'
description = 'RemixLab'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// QueryDSL Version
ext {
    querydslVersion = "5.0.0"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:4.9.0"
    }
}

dependencies {
    /* test
     */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    /* Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     */

    /*  GCP Storage
     */
    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'

    /* Spring boot Web */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    /* Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
     */

    /* Security ( JWT ) */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    /* Spring Boot Dev */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'

    /* JSON */

    implementation 'com.fasterxml.jackson.module:jackson-module-jsonSchema:2.14.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    /* RDBMS */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* Database */
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    /* Lombok */
    annotationProcessor 'org.projectlombok:lombok'

    /*QUERY-DSL*/
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "org.springframework.data:spring-data-commons"


    /* Swagger */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'


}

// Querydsl 설정
def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
    main.java.srcDirs += [generated]
}

// gradle clean 시에 Qclass 디렉토리 삭제
clean {
    delete file(generated)
}

tasks.named('test') {
    useJUnitPlatform()
}
